--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -70,7 +70,7 @@ body {
     width: 100%;
     height: 60px;
 
-    background-color: #ffffff;
+    background-color: #3e8e41;
 
     margin: 20px auto;
 
