--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -2,8 +2,10 @@
 
 
 body {
-    background-color: #F0B06B;
+    background-color:  #b8c480;
 }
+
+
 
 .button, #sequenceInput, #result, #pValueSlider {
     border-radius: 5px;
@@ -33,11 +35,22 @@ body {
     transform: translateY(2px);
 }
 
+
+
 .segment {
     border-radius: 2px;
 
 }
 
+.motifToChose {
+    display: table;
+    padding: 2px;
+    margin: 4px;
+
+    background-color: #d4e79e;
+    border-radius: 10px;
+    border: 0px solid;
+}
 
 #motifList {
     display: none;
@@ -70,7 +83,7 @@ body {
     width: 100%;
     height: 60px;
 
-    background-color: #3e8e41;
+    background-color: #ffffff;
 
     margin: 20px auto;
 
