--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -9,7 +9,7 @@ body {
 
 .button, #sequenceInput, #result, #pValueSlider {
     border-radius: 5px;
-    border: 0px solid #4CAF50;
+    border: 0 solid #4CAF50;
 
 }
 
@@ -49,7 +49,7 @@ body {
 
     background-color: #d4e79e;
     border-radius: 10px;
-    border: 0px solid;
+    border: 0 solid;
 }
 
 #motifList {
@@ -65,6 +65,7 @@ body {
     font-size: 20px;
 
     width: 100%;
+    height: 100px;
 
     /*#FFD995*/
 
@@ -81,7 +82,10 @@ body {
     font-size: 20px;
 
     width: 100%;
-    height: 60px;
+    height: 100px;
+
+    word-wrap: break-word;
+    overflow:auto;
 
     background-color: #ffffff;
 
