--- a/css/pSlider.css
+++ b/css/pSlider.css
@@ -1,5 +1,5 @@
 .inputBox {
-    position: absolute;
+    position: relative;
     left: 5px;
 }
 
@@ -18,7 +18,6 @@
 }
 
 #logSlider{
-    margin-left: 190px;
 }
 
 .sliderBox {
