--- a/css/resultAndSeqInput.css
+++ b/css/resultAndSeqInput.css
@@ -85,7 +85,7 @@
 
 #result {
     font-family: "Courier New", "Times New Roman";
-    font-size: 20px;
+    font-size: 23px;
 
     width: 100%;
     height: 100px;
@@ -96,7 +96,8 @@
 
     background-color: #ffffff;
 
-    margin: 5px auto;
+    margin-top: 10px;
+    margin-bottom: 20px;
 
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
