--- a/css/resultContainer.css
+++ b/css/resultContainer.css
@@ -1,25 +1,39 @@
+#tooltip-container{
+    width: 100%;
+    margin: 5px auto;
+    height: 20px;
+    background-color: var(--tooltip-container-bg);
+}
+
 .segment .tooltip {
     background: #1496bb;
     color: #fff;
 
-    padding: 20px;
-    pointer-events: none;
+    display: inline;
+    vertical-align: top;
 
-    -webkit-transform: translateY(10px);
-    -moz-transform: translateY(10px);
-    -ms-transform: translateY(10px);
-    -o-transform: translateY(10px);
-    transform: translateY(10px);
-    -webkit-transition: all .25s ease-out;
-    -moz-transition: all .25s ease-out;
-    -ms-transition: all .25s ease-out;
-    -o-transition: all .25s ease-out;
-    transition: all .25s ease-out;
-    -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
-    -moz-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
-    -ms-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
-    -o-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
-    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+
+
+    overflow: auto;
+
+    /*padding: 20px;*/
+    /*pointer-events: none;*/
+
+    /*-webkit-transform: translateY(10px);*/
+    /*-moz-transform: translateY(10px);*/
+    /*-ms-transform: translateY(10px);*/
+    /*-o-transform: translateY(10px);*/
+    /*transform: translateY(10px);*/
+    /*-webkit-transition: all .25s ease-out;*/
+    /*-moz-transition: all .25s ease-out;*/
+    /*-ms-transition: all .25s ease-out;*/
+    /*-o-transition: all .25s ease-out;*/
+    /*transition: all .25s ease-out;*/
+    /*-webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);*/
+    /*-moz-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);*/
+    /*-ms-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);*/
+    /*-o-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);*/
+    /*box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);*/
 }
 
 /* This bridges the gap so you can mouse into the tooltip without it disappearing */
