--- a/css/resultAndSeqInput.css
+++ b/css/resultAndSeqInput.css
@@ -96,11 +96,12 @@
 
     background-color: #ffffff;
 
-    margin-top: 10px;
     margin-bottom: 20px;
 
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+
+    border-top: none;
 }
 
