--- a/css/motifPicker.css
+++ b/css/motifPicker.css
@@ -1,5 +1,5 @@
 #motif-setup{
-    height: 160px;
+    height: 140px;
 }
 
 #motif-picker{
@@ -102,7 +102,11 @@
 
     background-color: var(--motif-title-bg);
     border-radius: 10px;
-    border: 0 solid;
+    border: 1px solid black;
+
+    font-family: "Gotham Rounded SSm A","Gotham Rounded SSm B";
+    font-size: 16px;
+    color: var(--motif-title-color);
 }
 
 .motif-title:hover {
@@ -111,7 +115,7 @@
 
 #motif-list {
 
-    height: 110px;
+    height: 80px;
     overflow-y: scroll;
     margin-top: 10px;
 }
