-selected motifs moved down, closer to result -changed appearance of tooltip window

--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -38,7 +38,7 @@
     --motif-title-bg: #F8F991;
     --motif-title-color: black;
 
-    --tooltip-container-bg: white;
+    --tooltip-container-bg: #F8F991;
 
     /*--main-bg-color:#84AE31 ;
 
