--- a/css/resultContainer.css
+++ b/css/resultContainer.css
@@ -1,10 +1,14 @@
 #tooltip-container{
     width: 100%;
-    margin-top: 5px;
-    height: 30px;
-    background-color: var(--tooltip-container-bg);
+    height: 50px;
 
+    padding: 5px;
+    margin-top: 5px;
+
+    background-color: var(--tooltip-container-bg);
     border-bottom: dashed 1px;
+
+    vertical-align: middle;
 }
 
 .segment .tooltip {
@@ -15,6 +19,12 @@
     vertical-align: top;
 
     overflow: auto;
+}
+
+.tooltip{
+    text-align: center;
+    vertical-align: middle;
+    font-size: 26px;
 }
 
 
