--- a/css/resultAndSeqInput.css
+++ b/css/resultAndSeqInput.css
@@ -21,7 +21,7 @@
     border-bottom: solid salmon 4px;
 }
 
-#sequenceInput {
+#sequence-input {
     font-family: "Courier New", "Times New Roman";
     font-size: 23px;
 
