--- a/css/navigationBar.scss
+++ b/css/navigationBar.scss
@@ -16,11 +16,16 @@ ul {
     padding: 0;
   > li {
     margin: 0;
+    > a {
+      outline: none;
+    }
   }
 }
 
 /* Nav-bar Styles */
 .nav-bar {
+  z-index: 3;
+
   width: 100%;
   height: $nav-line-height * 2;
   margin: 0 0 10px 0;
@@ -80,6 +85,7 @@ ul {
       >li a {
         display: block;
         padding: 10px 10px;
+        color: $primaryMenuText;
         text-decoration: none;
       }
     }
@@ -117,7 +123,7 @@ ul {
   }
 
   > a:active {
-    color: green;
+    color: red;
   }
 
   > a > .caret {
@@ -127,7 +133,6 @@ ul {
 
   > .sub-nav {
     display: block;
-
   }
 }
 
