--- a/css/navigationBar.scss
+++ b/css/navigationBar.scss
@@ -1,3 +1,5 @@
+// Options
+
 $primaryMenuBackground: #fafafa;
 $secondaryMenuBackground: #ff8358;
 
@@ -99,8 +101,6 @@ ul {
       display: inline-block;
       width: 320px;
       padding-left: 5px;
-      //padding: 10px 24px 10px 40px;
-
 
       border: 0 solid #A7A7A7;
       -webkit-border-radius: 5px;
@@ -108,8 +108,7 @@ ul {
       border-radius: 5px;
       outline: none;
 
-      background: $primaryMenuBackground;
-      //url(http://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
+      background: $primaryMenuBackground;  //url(http://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
       color: $secondaryMenuText;
       font-size: 15px;
     }
