--- a/css/sidenav.scss
+++ b/css/sidenav.scss
@@ -1,24 +1,19 @@
-// from navigationBar.scss
-$nav-line-height: 40px;
+// Utilities
+@import "utilities/variables";
 
-// Options
-$sidebar-initial-width: 3.5rem;
-$navColor: #2680F3;
-//#2680F3;
 
 // Sidebar
-
 .nav-sidebar {
   position: absolute;
-  top: $nav-line-height * 2;
+  top: $topNav-navLineHeight * 2;
   left: 0;
   height: 100%;
   z-index: 2;
 
   > nav {
-    width: $sidebar-initial-width;
+    width: $sideNav-initialWidth * 1;
     height: 100%;
-    background: $navColor;
+    background: $sideNav-mainColor;
     color: white;
     transition: all 300ms ease;
     overflow: hidden;
@@ -26,7 +21,7 @@ $navColor: #2680F3;
 
     // SIDEBAR EXPAND
     &:hover {
-      width: $sidebar-initial-width * 4;
+      width: $sideNav-initialWidth * 4;
     }
 
     * {
@@ -36,12 +31,12 @@ $navColor: #2680F3;
     // SIDEBAR MENU
     > ul {
       display: table;
-      width: $sidebar-initial-width * 4;
+      width: $sideNav-initialWidth * 4;
 
       // SIDEBAR MENU ITEM
       > li {
         display: table-row;
-        background: darken($navColor, 10%);
+        background: darken($sideNav-mainColor, 10%);
         cursor: pointer;
 
         > a {
@@ -69,29 +64,29 @@ $navColor: #2680F3;
         }
 
         &:hover {
-          background: lighten($navColor, 10%);
+          background: lighten($sideNav-mainColor, 10%);
         }
 
         &:active {
-          background: lighten($navColor, 20%);
+          background: lighten($sideNav-mainColor, 20%);
         }
 
         > div {
-          height: $sidebar-initial-width;
-          line-height: $sidebar-initial-width;
+          height: $sideNav-initialWidth;
+          line-height: $sideNav-initialWidth;
           display: table-cell;
 
           // ICON
           &:nth-child(1) {
-            width: $sidebar-initial-width;
+            width: $sideNav-initialWidth;
             text-align: center;
           }
 
           // DESCRIPTION
           &:nth-child(2) {
-            width: $sidebar-initial-width * 3;
+            width: $sideNav-initialWidth * 3;
             text-align: left;
-            padding-left: $sidebar-initial-width / 5;
+            padding-left: $sideNav-initialWidth / 5;
           }
         }
       }
@@ -102,6 +97,6 @@ $navColor: #2680F3;
 /* Media for larger devices */
 @media screen and (min-width: 800px) {
   .nav-sidebar {
-    top: $nav-line-height * 1;
+    top: $topNav-navLineHeight * 1;
   }
 }
